-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.2
-
-
0842b01f02 (qt/qtbase/dev) 80292b9b2c (qt/qtbase/6.2) 60afb344ce (qt/qtbase/6.3) 80292b9b2c (qt/tqtc-qtbase/6.2) 60afb344ce (qt/tqtc-qtbase/6.3) 0842b01f02 (qt/tqtc-qtbase/dev)
Compiling Qt with MSVC 2022 and Win 11 SDK in c++20 mode fails in qtdeclarative with error:
qproperty.h(85): error C2182: 'val': illegal use of type 'void' qproperty.h(92): error C2182: 'abstract declarator': illegal use of type 'void'
Configuration used:
..\qt-everywhere-src-6.2.2\configure -debug -c++std c++20 cmake --build .
For Gerrit Dashboard: QTBUG-100072 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
391195,7 | QProperty: Work around constexpr issues on MSVC | dev | qt/qtbase | Status: MERGED | +2 | 0 |
391620,2 | QProperty: Work around constexpr issues on MSVC | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
391621,2 | QProperty: Work around constexpr issues on MSVC | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |