QProperty: Work around constexpr issues on MSVC

MSVC complains about illegal uses of void, even though the code should
be guarded by an if constexpr statement.
 qproperty.h(85): error C2182: 'val': illegal use of type 'void'
 qproperty.h(92): error C2182: 'abstract declarator': illegal use of type 'void'

Avoid the issue by using a dedicated dummy type instead of void.

Fixes: QTBUG-100072
Task-number: QTQAINFRA-4242
Change-Id: Idc4886c26c3794e709eb762ba836139f720f8133
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit 0842b01f0269cdd8099a5fbe849c5c2876a0d744)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>